@@ -9573,7 +9573,10 @@ Assumes that $\kbd{prec}\geq 0$.
 \fun{GEN}{pol_x}{long v} Returns the monomial of degree $1$ in variable $v$.
 
 \fun{GEN}{pol_xn}{long n, long v} Returns the monomial of degree $n$
-in variable $v$. Assume that $n \geq 0$.
+in variable $v$; assume that $n \geq 0$.
+
+\fun{GEN}{pol_xnall}{long n, long v} Returns the Laurent monomial of degree $n$
+in variable $v$; $n < 0$ is allowed.
 
 \fun{GEN}{pol_x_powers}{long N, long v} returns the powers of
 \kbd{pol\_x(v)}, of degree $0$ to $N-1$, in a vector with $N$ components.
