@@ -5007,6 +5007,7 @@ INLINE GEN    pol_0(long v);
 INLINE GEN    pol_1(long v);
 INLINE GEN    pol_x(long v);
 INLINE GEN    pol_xn(long n, long v);
+INLINE GEN    pol_xnall(long n, long v);
 INLINE GEN    pol0_F2x(long sv);
 INLINE GEN    pol1_F2x(long sv);
 INLINE GEN    polx_F2x(long sv);
