@@ -80,6 +80,7 @@ BA 40- [libpari] ZpXQX_roots, ZqX_roots, ZqX_liftfact, ZqX_liftroot,
    42- [libpari] Qdivii
    43- GP function ellintegralmodel
    44- [libpari] ZM_hnf_knapsack
+   45- [libpari] pol_xn, pol_xnall
 
   Changed
     1- remove useless flag in idealappr: directly allow factorization
